<resources>
    <string name="app_name">BookYourTrain 2.0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="image_train">image train</string>
    <string name="please_sign_in">Please sign in to continue.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="please_register_to_login">Please register to login</string>
    <string name="sign_up">Sign Up</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="dont_have_account">Don\'t have account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_account">Already have account?</string>
    <string name="show">show</string>
    <string name="name">Name</string>
    <string name="sign_in2">Sign In</string>
    <string name="nim">NIM</string>
    <string name="train_name">Train Name</string>
    <string name="add_travel">+ Add Travel</string>
    <string name="bookyourtrain">BookYourTrain</string>
    <string name="add_travel_title">Add Travel</string>
    <string name="enter_departure_station">Enter departure station</string>
    <string name="passenger_name">Passenger Name</string>
    <array name="train">
        <item>Argo Dwipangga</item>
        <item>Argo Wilis</item>
        <item>Commuter Line</item>
    </array>
    <array name="classes">
        <item>Economy</item>
        <item>Business</item>
        <item>Executive</item>
        <item>Luxury</item>
    </array>
    <string name="paket_satu">Makan</string>
    <string name="paket_dua">Duduk di pinggir jendela</string>
    <string name="paket_tiga">Duduk di depan</string>
    <string name="paket_empat">Selimut dan Bantal</string>
    <string name="paket_lima">Proteksi tambahan</string>
    <string name="paket_enam">Bagasi tambahan</string>
    <string name="paket_tujuh">Antar-jemput ke stasiun</string>
    <string name="update">Update</string>
    <string name="your_orders">Your Orders</string>
</resources>